# EskoLokt

./: README.md
.github/: deploy-trigger
.github/workflows/: contract-deploy.yml  contract-tests.yml  deploy.yml
cod-lock/: Cargo.toml  README.md
contracts/CodLock/: Cargo.toml
contracts/CodLock/src/: lib.rs  test.rs
docs/: SETUP-testnet.md
docs/design/ui-reference/: DESIGN.md
docs/launch/: product-hunt.md
docs/superpowers/plans/: 2026-06-24-level2-live-contract-multiwallet.md  2026-07-11-real-deposit-escrow-prototype.md  2026-07-15-combine-onchain-delivery-code.md
docs/superpowers/specs/: 2026-06-21-codlock-seller-usability-design.md  2026-06-21-codlock-trust-model-design.md  2026-06-24-level2-live-contract-multiwallet-design.md  2026-07-11-real-deposit-escrow-prototype-design.md  2026-07-15-spotlight-tour-design.md
docs/tasks/: myr-2-supabase.md  yohan-1-ui.md  you-contract-integration.md
supabase/: schema.sql
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/src/: App.tsx  DevHarness.tsx  MobileApp.tsx  css.d.ts  main.tsx  mobile.css  stubData.ts  styles.css  tailwind.css  vite-env.d.ts
web/src/components/: ContractPanel.tsx  EmergencyOptions.tsx  EscrowDemo.tsx  GuideView.tsx  HowItWorks.tsx  LiveEscrowPanel.tsx  MiniBarChart.tsx  OrdersDashboard.tsx  ProofView.tsx  ShapeGrid.tsx  StellarWalletPanel.tsx  icons.tsx
web/src/data/: orders.ts
web/src/hooks/: useEscrow.ts  useStellarWallet.ts
(+32 files in other folders)
