[package]
name = "cod_lock"
version = "0.1.0"
edition = "2021"
authors = ["Quest Construction <info@questconstruction.com>"]
license = "MIT"
description = "Trustless cash-on-delivery escrow on Stellar for Filipino social-commerce sellers"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }

# Optimized settings for a small, fast Wasm contract.
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
